adjust style change to fix spacing issue in facts page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -354,10 +354,6 @@ h6 {
       width: 100%;
   }
 
-  .image-left {
-    margin-left: 10%;
-  }
-
   .facts_central-stack {
       width: 60%;
       display: inline;
